# 11402_CS351_ProjectB

./: CMakeLists.txt  ProductTable.md  README.md
.github/workflows/: ci.yml
data/: products.csv
docs/: 00_intended_use.md  01_plan.md  02_SRS.md  03_SDS.md  04_test_plan.md  05_acceptance_tests.md  06_traceability.md  07_deploy.md  08_known_issues.md
include/: csv_processor.h
src/: csv_processor.cpp  main.cpp
tests/: test_csv_processor.cpp
